--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -3,6 +3,7 @@
 
     &__container {
         display: flex;
+        justify-content: flex-between;
         flex-wrap: wrap;
         padding: 4.6rem 3rem;
 
@@ -13,7 +14,7 @@
 
     &__list {
         flex: 1;
-        min-width: 360px;
+        min-width: 260px;
     }
 
     &__list:not(:last-child) {
